Attempt at getting NIV of bible, then trying api bible

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -30,24 +30,84 @@
     "if not os.path.exists(output):\n",
     "    os.makedirs(output)\n",
     "\n",
-    "lines = open(\"pg1581.txt\", \"r\").readlines()\n",
+    "lines = open(\"cleaned_bible.txt\", \"r\").readlines()\n",
     "\n",
     "books = [] \n",
     "books_idx = {}\n",
-    "# there are books which are First of, second of etc \n",
-    "# we need to pick up their names \n",
-    "multinames = [\"Kings\", \"Paralipomenon\", \"Esdras\", \"Machabees\",\n",
-    "              \"Corinthians\",\"Thessalonians\", \"Timothy\", \"Peter\", \"John\"]\n",
-    "# then collect the name of the old testament books\n",
-    "old_books = [\"Genesis\", \"Exodus\", \"Leviticus\", \"Numbers\", \"Deuteronomy\",\"Josue\", \n",
-    "             \"Judges\", \"Ruth\", \"1Kings\", \"2Kings\", \"3Kings\", \"4Kings\", \n",
-    "             \"1Paralipomenon\",\"2Paralipomenon\", \"1Esdras\", \"2Esdras\", \n",
-    "             \"Tobias\", \"Judith\", \"Esther\", \"Job\", \"Psalms\", \"Proverbs\", \n",
-    "             \"Ecclesiastes\", \"Canticle\", \"Wisdom\", \"Ecclesiasticus\", \"Isaias\", \n",
-    "             \"Jeremias\", \"Lamentations\", \"Baruch\", \"Ezechiel\", \n",
-    "             \"Daniel\", \"Osee\", \"Joel\", \"Amos\", \"Abdias\", \"Joans\", \"Micheas\",\n",
-    "             \"Nahum\", \"Habacuc\", \"Sophonias\", \"Aggeus\", \"Zacharias\", \"Malachias\", \n",
-    "             \"1Machabees\", \"2Machabees\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "books = \"\"\"The Old Testament of the King James Version of the Bible,\\\n",
+    "The First Book of Moses: Called Genesis,\\\n",
+    "The Second Book of Moses: Called Exodus,\\\n",
+    "The Third Book of Moses: Called Leviticus,\\\n",
+    "The Fourth Book of Moses: Called Numbers,\\\n",
+    "The Fifth Book of Moses: Called Deuteronomy,\\\n",
+    "The Book of Joshua,\\\n",
+    "The Book of Judges,\\\n",
+    "The Book of Ruth,\\\n",
+    "The First Book of Samuel,\\\n",
+    "The Second Book of Samuel,\\\n",
+    "The First Book of the Kings,\\\n",
+    "The Second Book of the Kings,\\\n",
+    "The First Book of the Chronicles,\\\n",
+    "The Second Book of the Chronicles,\\\n",
+    "Ezra,\\\n",
+    "The Book of Nehemiah,\\\n",
+    "The Book of Esther,\\\n",
+    "The Book of Job,\\\n",
+    "The Book of Psalms,\\\n",
+    "The Proverbs,\\\n",
+    "Ecclesiastes,\\\n",
+    "The Song of Solomon,\\\n",
+    "The Book of the Prophet Isaiah,\\\n",
+    "The Book of the Prophet Jeremiah,\\\n",
+    "The Lamentations of Jeremiah,\\\n",
+    "The Book of the Prophet Ezekiel,\\\n",
+    "The Book of Daniel,\\\n",
+    "Hosea,\\\n",
+    "Joel,\\\n",
+    "Amos,\\\n",
+    "Obadiah,\\\n",
+    "Jonah,\\\n",
+    "Micah,\\\n",
+    "Nahum,\\\n",
+    "Habakkuk,\\\n",
+    "Zephaniah,\\\n",
+    "Haggai,\\\n",
+    "Zechariah,\\\n",
+    "Malachi,\\\n",
+    "The New Testament of the King James Bible,\\\n",
+    "The Gospel According to Saint Matthew,\\\n",
+    "The Gospel According to Saint Mark,\\\n",
+    "The Gospel According to Saint Luke,\\\n",
+    "The Gospel According to Saint John,\\\n",
+    "The Acts of the Apostles,\\\n",
+    "The Epistle of Paul the Apostle to the Romans,\\\n",
+    "The First Epistle of Paul the Apostle to the Corinthians,\\\n",
+    "The Second Epistle of Paul the Apostle to the Corinthians,\\\n",
+    "The Epistle of Paul the Apostle to the Galatians,\\\n",
+    "The Epistle of Paul the Apostle to the Ephesians,\\\n",
+    "The Epistle of Paul the Apostle to the Philippians,\\\n",
+    "The Epistle of Paul the Apostle to the Colossians,\\\n",
+    "The First Epistle of Paul the Apostle to the Thessalonians,\\\n",
+    "The Second Epistle of Paul the Apostle to the Thessalonians,\\\n",
+    "The First Epistle of Paul the Apostle to Timothy,\\\n",
+    "The Second Epistle of Paul the Apostle to Timothy,\\\n",
+    "The Epistle of Paul the Apostle to Titus,\\\n",
+    "The Epistle of Paul the Apostle to Philemon,\\\n",
+    "The Epistle of Paul the Apostle to the Hebrews,\\\n",
+    "The General Epistle of James,\\\n",
+    "The First Epistle General of Peter,\\\n",
+    "The Second General Epistle of Peter,\\\n",
+    "The First Epistle General of John,\\\n",
+    "The Second Epistle General of John,\\\n",
+    "The Third Epistle General of John,\\\n",
+    "The General Epistle of Jude,\\\n",
+    "The Revelation of Saint John the Divine,\\\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "\n",
     "for i, val in enumerate(lines, 0):\n",
     "    # retireve all the chapters \n",
